Modular-Mvci-Halyard now working well